--- a/src/app/pages/alumnos/components/alumnos-dialog/alumnos-list/alumnos-list.html
+++ b/src/app/pages/alumnos/components/alumnos-dialog/alumnos-list/alumnos-list.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="header">
     <h1>Listado de Alumnos</h1>
-    <button mat-raised-button color="primary" (click)="openDialog()">
+    <button mat-raised-button color= "black" (click)="openDialog()">
       <mat-icon>add</mat-icon> Nuevo Alumno
     </button>
   </div>
