--- a/src/app/pages/alumnos/components/alumnos-dialog/alumnos-list/alumnos-list.scss
+++ b/src/app/pages/alumnos/components/alumnos-dialog/alumnos-list/alumnos-list.scss
@@ -1,5 +1,5 @@
 // Variables de colores
-$primary-color: #3f51b5;
+$primary-color: #000000;
 $accent-color: #ff4081;
 $warn-color: #f44336;
 $light-gray: #f5f5f5;
