--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -11,21 +11,21 @@
         <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" class="d-block w-100" alt="Angular Material Shiba 1" style="max-height: 500px; object-fit: cover;">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
           <h5>Angular Shiba 1</h5>
-          <p>La mejor calidad en frameworks frontend</p>
+          <p>Julián Alexis Cano Cruces</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" class="d-block w-100" alt="Angular Material Shiba 1" style="max-height: 500px; object-fit: cover;">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
           <h5>Angular Shiba 1</h5>
-          <p>Componentes modernos y flexibles</p>
+          <p>Sistema Ventas</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" class="d-block w-100" alt="Angular Material Shiba 1" style="max-height: 500px; object-fit: cover;">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
           <h5>Angular Shiba 1</h5>
-          <p>Diseño responsive para todos los dispositivos</p>
+          <p>Carrusel de Imágenes</p>
         </div>
       </div>
     </div>
@@ -49,10 +49,10 @@
           <mat-card-content class="p-3">
             <h5 class="product-title">Producto {{i+1}}</h5>
             <div class="d-flex justify-content-between align-items-center mt-2">
-              <span class="product-price">$1000.00 MXN</span>
+              <span class="product-price">$500.00 MXN</span>
               <span class="badge bg-success">Envío Gratis</span>
             </div>
-            <button mat-raised-button color="primary" class="w-100 mt-3">
+            <button mat-raised-button color="" class="w-100 mt-3">
               <mat-icon>add_shopping_cart</mat-icon> Añadir
             </button>
           </mat-card-content>
